Fix #1755: Alignement, page de recherche sidebar

--- a/assets/scss/layout/_sidebar.scss
+++ b/assets/scss/layout/_sidebar.scss
@@ -337,4 +337,10 @@
             }
         }
     }
+
+    ul#searchfor {
+        li {
+            line-height: 30px;
+        }
+    }
 }
